--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,7 @@ spring.application.name=sbplayground2
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=password
-spring.datasource.driver-class-name=org.postgresql.Driver   
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
