--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,6 @@ spring.datasource.username=postgres
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath:schema.sql
+# Flyway configuration
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
