--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,10 @@ out/
 
 ### Kotlin ###
 .kotlin
+
+# Node.js
+node_modules/
+package-lock.json
+
+# Tailwind CSS
+src/main/resources/static/css/output.css
